--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -42,10 +42,10 @@ import Linux from "./logos/Linux.astro";
       <div
         class="max-w-[100dvw] w-[700px] px-5 py-20 min-h-full-main h-auto flex flex-col justify-center"
       >
-        <h2 class="text-5xl md:text-7xl text-neutral-100 font-medium mb-2">
-          <span class="text-orange-100">A</span>drian <span
-            class="text-orange-100">T</span
-          >afoya <span class="text-orange-100">M</span>.
+        <h2 class="text-5xl md:text-7xl dark:text-neutral-100 font-medium mb-2">
+          <span class="text-orange-950 dark:text-orange-100">A</span>drian <span
+            class="text-orange-950 dark:text-orange-100">T</span
+          >afoya <span class="text-orange-950 dark:text-orange-100">M</span>.
         </h2>
         <div class="py-2">
           <p class="gap-2 md:text-lg">
@@ -61,7 +61,7 @@ import Linux from "./logos/Linux.astro";
         <div class="mt-4">
           <a
             href="mailto:atafoya863@gmail.com"
-            class="border-2 border-orange-300 text-orange-300 font-medium py-1 px-4 transition-colors ease-in delay-150 hover:bg-orange-300 hover:text-slate-950 inline-flex items-center gap-2"
+            class="border-2 border-orange-600 text-orange-600 hover:bg-orange-600 hover:text-slate-50 dark:border-orange-300 dark:text-orange-300 font-medium py-1 px-4 transition-colors ease-in delay-150 dark:hover:bg-orange-300 dark:hover:text-slate-950 inline-flex items-center gap-2"
           >
             <Email className="size-5" />
             Contáctame
@@ -71,13 +71,13 @@ import Linux from "./logos/Linux.astro";
 
       <!-- Frase -->
       <div class="h-auto py-10 pb-14 md:py-0 md:pb-20 px-5 max-w-[100dvw] w-[700px] flex flex-col items-center justify-center md:items-center md:flex-row-reverse gap-6">
-        <blockquote class="text-neutral-100 text-base md:text-lg">
+        <blockquote class="dark:text-neutral-100 text-base md:text-lg">
           <p class="italic">
             <!-- "El desarrollo progresivo del hombre depende vitalmente de las
             invenciones. Son el resultado más importante del cerebro creativo". -->
             "La creatividad es inteligencia divirtiéndose."
           </p>
-          <small class="block mt-4 text-base text-right text-neutral-200">- Albert Einstein.</small>
+          <small class="block mt-4 text-base text-right text-neutral-800 dark:text-neutral-200">- Albert Einstein.</small>
         </blockquote>
         <img src={imgAlbert.src} class="max-w-[100%] w-[300px] [mask-image:linear-gradient(#000_80%,transparent)]" alt="Imagen de Albert Einstein">
       </div>
@@ -88,16 +88,16 @@ import Linux from "./logos/Linux.astro";
       <div>
         <article class="flex flex-col md:flex-row-reverse gap-3 md:gap-8 items-start">
           <img
-            class="w-full md:w-1/2 h-auto border-2 border-neutral-600"
+            class="w-full md:w-1/2 h-auto border-2 border-neutral-400 dark:border-neutral-600"
             src={imgCloneSpotify.src}
             alt="Imagen de la app web del clon de spotify"
             loading="lazy"
           />
           <div>
-            <h3 class="text-2xl md:text-3xl font-medium mb-2 text-green-300">
+            <h3 class="text-2xl md:text-3xl font-medium mb-2 text-green-500 dark:text-green-300">
               Spotify clon - Web App
             </h3>
-            <h4 class="text-sm mb-4 text-neutral-200">Diciembre 2024</h4>
+            <h4 class="text-sm mb-4 text-neutral-700 dark:text-neutral-200">Diciembre 2024</h4>
             <div class="flex gap-4 mb-4">
               <span><React className="size-6" /></span>
             </div>
@@ -110,7 +110,7 @@ import Linux from "./logos/Linux.astro";
                 href="https://spotifymx.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="border-2 border-green-400 text-green-400 font-medium py-1 px-4 hover:bg-green-400 transition-colors ease-in delay-150 hover:text-slate-950 inline-flex items-center gap-2"
+                class="border-2 border-green-600 text-green-700 hover:bg-green-600 dark:border-green-400 hover:text-slate-50 dark:text-green-400 font-medium py-1 px-4 dark:hover:bg-green-400 transition-colors ease-in delay-150 dark:hover:text-slate-950 inline-flex items-center gap-2"
               >
                 <Link className="size-5" />
                 Preview
@@ -119,7 +119,7 @@ import Linux from "./logos/Linux.astro";
                 href="https://github.com/adriantaf/spotify"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="border-2 border-gray-300 text-gray-300 font-medium py-1 px-4 hover:bg-gray-300 transition-colors ease-in delay-150 hover:text-slate-950 inline-flex items-center gap-2"
+                class="border-2 border-gray-500 text-gray-600 hover:bg-gray-500 hover:text-slate-50 dark:border-gray-300 dark:text-gray-300 font-medium py-1 px-4 dark:hover:bg-gray-300 transition-colors ease-in delay-150 dark:hover:text-slate-950 inline-flex items-center gap-2"
               >
                 Código
               </a>
@@ -135,15 +135,15 @@ import Linux from "./logos/Linux.astro";
           class="flex flex-col md:flex-row-reverse gap-3 md:gap-8 items-start mb-16"
         >
           <img
-            class="w-full md:w-1/2 h-auto border-2 border-neutral-600"
+            class="w-full md:w-1/2 h-auto border-2 border-neutral-400 dark:border-neutral-600"
             src={imgHashiRamen.src}
             alt="Imagen del sitio web del restaurante hashi ramen pho"
           />
           <div>
-            <h3 class="text-2xl md:text-3xl font-medium mb-2 text-blue-300">
+            <h3 class="text-2xl md:text-3xl font-medium mb-2 text-blue-400 dark:text-blue-300">
               Hashi Ramen & Pho - Sitio Web
             </h3>
-            <h4 class="text-sm mb-4 text-neutral-200">Septiembre 2024</h4>
+            <h4 class="text-sm mb-4 text-neutral-700 dark:text-neutral-200">Septiembre 2024</h4>
             <div class="flex gap-4 mb-4">
               <span><AstroIcon className="size-6" /> </span>
               <span><React className="size-6" /></span>
@@ -156,14 +156,14 @@ import Linux from "./logos/Linux.astro";
             </p>
             <ul class="mb-6 space-y-2">
               <li class="flex items-start gap-2">
-                <Check className="text-green-400 h-4 w-5 min-w-5 min-h-5" />
+                <Check className="text-green-600 dark:text-green-400 h-4 w-5 min-w-5 min-h-5" />
                 <span
                   >Implementación de colores contrastantes para un diseño
                   moderno.</span
                 >
               </li>
               <li class="flex items-start gap-2">
-                <Check className="text-green-400 h-4 w-5 min-w-5 min-h-5" />
+                <Check className="text-green-600 dark:text-green-400 h-4 w-5 min-w-5 min-h-5" />
                 <span>Optimización para dispositivos móviles.</span>
               </li>
             </ul>
@@ -172,7 +172,7 @@ import Linux from "./logos/Linux.astro";
                 href="https://hashiramen.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="border-2 border-blue-400 text-blue-400 font-medium py-1 px-4 transition-colors ease-in delay-150 hover:bg-blue-400 hover:text-slate-950 inline-flex items-center gap-2"
+                class="border-2 border-blue-500 text-blue-600 hover:bg-blue-500 dark:border-blue-400 hover:text-slate-50 dark:text-blue-400 dark:hover:bg-blue-400 font-medium py-1 px-4 transition-colors ease-in delay-150 dark:hover:text-slate-950 inline-flex items-center gap-2"
               >
                 <Link className="size-5" />
                 Preview
@@ -183,17 +183,17 @@ import Linux from "./logos/Linux.astro";
 
         <article class="flex flex-col md:flex-row gap-3 md:gap-8 items-start">
           <img
-            class="w-full md:w-1/2 h-auto border-2 border-neutral-600"
+            class="w-full md:w-1/2 h-auto border-2 border-neutral-400 dark:border-neutral-600"
             src={imgLocOsLinux.src}
             alt="Vista previa del diseño de la página de Loc-OS Linux"
             loading="lazy"
           />
 
           <div>
-            <h3 class="text-2xl md:text-3xl font-medium mb-2 text-blue-300">
+            <h3 class="text-2xl md:text-3xl font-medium mb-2 text-blue-400 dark:text-blue-300">
               Loc-OS Linux - Diseño Web
             </h3>
-            <h4 class="text-sm mb-4 text-neutral-200">2021</h4>
+            <h4 class="text-sm mb-4 text-neutral-700 dark:text-neutral-200">2021</h4>
             <div class="flex gap-4 mb-4">
               <span><Html className="size-5" /> </span>
               <span><Css className="size-5" /></span>
@@ -208,14 +208,14 @@ import Linux from "./logos/Linux.astro";
             </p>
             <ul class="mb-6 space-y-2">
               <li class="flex items-start gap-2">
-                <Check className="text-green-400 h-4 w-5 min-w-5 min-h-5" />
+                <Check className="text-green-600 dark:text-green-400 h-4 w-5 min-w-5 min-h-5" />
                 <span
                   >Implementación de colores contrastantes para un tema oscuro
                   moderno.</span
                 >
               </li>
               <li class="flex items-start gap-2">
-                <Check className="text-green-400 h-4 w-5 min-w-5 min-h-5" />
+                <Check className="text-green-600 dark:text-green-400 h-4 w-5 min-w-5 min-h-5" />
                 <span>Optimización para dispositivos móviles.</span>
               </li>
             </ul>
@@ -224,7 +224,7 @@ import Linux from "./logos/Linux.astro";
                 href="https://adriantaf.github.io/loc-os-linux/"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="border-2 border-blue-400 text-blue-400 font-medium py-1 px-4 transition-colors ease-in delay-150 hover:bg-blue-400 hover:text-slate-950 inline-flex items-center gap-2"
+                class="border-2 border-blue-500 text-blue-600 hover:bg-blue-500 dark:border-blue-400 hover:text-slate-50 dark:text-blue-400 dark:hover:bg-blue-400 font-medium py-1 px-4 transition-colors ease-in delay-150 dark:hover:text-slate-950 inline-flex items-center gap-2"
               >
                 <Link className="size-5" />
                 Preview
@@ -233,7 +233,7 @@ import Linux from "./logos/Linux.astro";
                 href="https://github.com/adriantaf/loc-os-linux"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="border-2 border-gray-300 text-gray-300 font-medium py-1 px-4 transition-colors ease-in delay-150 hover:bg-gray-300 hover:text-slate-950 inline-flex items-center gap-2"
+                class="border-2 border-gray-500 text-gray-600 hover:bg-gray-500 hover:text-slate-50 dark:border-gray-300 dark:text-gray-300 font-medium py-1 px-4 dark:hover:bg-gray-300 transition-colors ease-in delay-150 dark:hover:text-slate-950 inline-flex items-center gap-2"
               >
                 Código
               </a>
@@ -247,7 +247,7 @@ import Linux from "./logos/Linux.astro";
 
       <div class="flex flex-wrap gap-8 sm:gap-14 sm:flex-row">
         <div>
-          <h3 class="text-xl text-neutral-300 font-medium mb-2 md:mb-4">Front-end</h3>
+          <h3 class="text-xl text-neutral-700 dark:text-neutral-300 font-medium mb-2 md:mb-4">Front-end</h3>
           <div class="w-full flex flex-wrap gap-5">
             <SkillContainer>
               <SkillItem>
@@ -282,7 +282,7 @@ import Linux from "./logos/Linux.astro";
           </div>
         </div>
         <div>
-          <h3 class="text-xl text-neutral-300 font-medium mb-2 md:mb-4">Back-end</h3>
+          <h3 class="text-xl text-neutral-700 dark:text-neutral-300 font-medium mb-2 md:mb-4">Back-end</h3>
           <div class="w-full flex flex-wrap gap-5">
             <SkillContainer>
               <SkillItem>
@@ -301,7 +301,7 @@ import Linux from "./logos/Linux.astro";
           </div>
         </div>
         <div>
-          <h3 class="text-xl text-neutral-300 font-medium mb-2 md:mb-4">Otros</h3>
+          <h3 class="text-xl text-neutral-700 dark:text-neutral-300 font-medium mb-2 md:mb-4">Otros</h3>
           <div class="w-full flex flex-wrap gap-5">
             <SkillContainer className="max-w-[50%]">
               <SkillItem>
@@ -359,15 +359,15 @@ import Linux from "./logos/Linux.astro";
           <h3 class="text-lg md:text-2xl font-medium mb-2">
             Ingeniería en Sistemas Computacionales
           </h3>
-          <p class="text-neutral-200 text-base mb-2 md:text-lg">
+          <p class="text-neutral-800 dark:text-neutral-200 text-base mb-2 md:text-lg">
             Instituto Tecnológico de Ensenada (ITE)
           </p>
-          <p class="text-sm text-neutral-300">Agosto 2023 - En curso</p>
+          <p class="text-sm text-neutral-700 dark:text-neutral-300">Agosto 2023 - En curso</p>
         </div>
         <div class="border-l-4 border-purple-500 pl-6">
           <h3 class="text-lg md:text-2xl font-medium mb-2">Técnico en Programación</h3>
-          <p class="text-neutral-200 text-base mb-2 md:text-lg">CBTIS 41</p>
-          <p class="text-sm text-neutral-300">Agosto 2019 - Julio 2023</p>
+          <p class="text-neutral-800 dark:text-neutral-200 text-base mb-2 md:text-lg">CBTIS 41</p>
+          <p class="text-sm text-neutral-700 dark:text-neutral-300">Agosto 2019 - Julio 2023</p>
         </div>
       </div>
     </Section>
