--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,28 +1,35 @@
 ---
 import BgVideo from "../assets/video/teclado.mp4";
-import './styles/Fonts.css';
+import "./styles/Fonts.css";
 ---
 
 <!doctype html>
-<html lang="es">
+<html lang="es" class="dark">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<meta name="description" content="Conoce más sobre mi y mis proyectos" />
+		<meta
+			name="description"
+			content="Portafolio de Adrian Tafoya, desarrollador web y de software. Explora mis proyectos destacados."
+		/>
 		<title>Adrian Tafoya | Portafolio</title>
+		<script src="../scripts/toggle_theme.js"></script>
 	</head>
-	<body class="text-neutral-100 font-mono relative bg-slate-950">
+	<body
+		class="text-neutral-950 dark:text-neutral-100 font-mono relative bg-slate-100 dark:bg-slate-950 transition-colors delay-100"
+	>
 		<video
 			id="bg-video"
 			muted
 			autoplay
 			loop
-			class="h-dvh hidden md:block z-10 object-cover w-full absolute top-0 left-0"
-			src={BgVideo}
-		></video>
-		<div class="body-content h-dvh w-full z-[100] absolute top-0 left-0">
+			class="h-dvh hidden dark:md:block z-10 object-cover w-full absolute top-0 left-0"
+			src={BgVideo}></video>
+		<div
+			class="body-content h-dvh w-full z-[100] bg-slate-100 bg-opacity-90 dark:bg-slate-950 dark:bg-opacity-85 absolute top-0 left-0 transition-colors delay-100"
+		>
 			<slot />
 		</div>
 	</body>
@@ -58,35 +65,32 @@ import './styles/Fonts.css';
 			"main"
 			"main"
 			"header";
-		background: linear-gradient(
-			180deg,
-			rgba(17, 18, 29, 0.85) 0%,
-			rgba(2, 6, 23, 0.85) 80%
-		);
 		backdrop-filter: blur(12px);
 	}
 
-	*::-webkit-scrollbar {
-		width: 14px;
-		background-color: rgba(255, 255, 255, 0.01);
-	}
-	*::-webkit-scrollbar-thumb {
-		background-color: rgba(255, 255, 255, 0.1);
-	}
-	*::-webkit-scrollbar-thumb:hover {
-		background-color: rgba(255, 255, 255, 0.15);
-	}
-	*::-webkit-scrollbar-thumb:active {
-		background-color: #9a7dcf;
-	}
+		/* Modo claro */
+		*::-webkit-scrollbar {
+			width: 14px;
+			background-color: rgba(100, 100, 100, 0.3);
+		}
+		*::-webkit-scrollbar-thumb {
+			background-color: rgba(100, 100, 100, 0.8);
+		}
+		*::-webkit-scrollbar-thumb:hover {
+			background-color: rgba(120, 120, 120, 1);
+		}
+		*::-webkit-scrollbar-thumb:active {
+			background-color: #936ed8;
+		}
 
-	*::-webkit-scrollbar-track-piece:start {
-		background: transparent;
-	}
+		/* Default */
+		*::-webkit-scrollbar-track-piece:start {
+			background: transparent;
+		}
 
-	*::-webkit-scrollbar-track-piece:end {
-		background: transparent;
-	}
+		*::-webkit-scrollbar-track-piece:end {
+			background: transparent;
+		}
 
 	header {
 		grid-area: header;
