--- a/src/components/shared/Section.astro
+++ b/src/components/shared/Section.astro
@@ -9,7 +9,7 @@ const { id, title, className } = Astro.props as Props;
 const hasIcon = Astro.slots.has("icon");
 ---
 
-<section id={id} class={`px-5 py-6 mb-14 max-w-[1000px] ${className}`}>
+<section id={id} class={`px-5 py-6 mb-14 max-w-full w-[1000px] ${className}`}>
   <h2 class="text-2xl md:text-3xl mb-4 md:mb-7 dark:text-neutral-100 font-medium flex items-center">
     {
       hasIcon && (
